fixed: font sizes overflow

--- a/src/Components/Footer/Footer.module.scss
+++ b/src/Components/Footer/Footer.module.scss
@@ -27,7 +27,7 @@
   }
 
   &_span {
-    font-size: clamp(1.35rem, 2.5vw, 2rem);
+    font-size: clamp(1.25rem, 2vw, 2rem);
     font-weight: 300;
   }
 }
